[package]
name = "rsgeo"
version = "0.1.1"
authors = ["chuxiuhong <chuxiuhong@chuxiuhong.com>"]
edition = "2018"
description = "rsgeo is a geography tool which is written with Rust. "
license = "MIT"
homepage = "https://github.com/chuxiuhong/rsgeo"
repository = "https://github.com/chuxiuhong/rsgeo"


[dependencies]